Fix and improve percent input on mobile.

--- a/css/gradient-editor.css
+++ b/css/gradient-editor.css
@@ -351,6 +351,16 @@
 	margin-left: -1px;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+
 .trash {
 	border-radius: 100%;
 	position: absolute;
